<resources>
    <string name="app_name">QFrat</string>
    <string name="title_activity_quiz">ActivityQuiz</string>
    <string name="loginnn">Enter Username &amp; Password</string>
    <string name="logusrhnt">Enter registered email</string>
    <string name="logusrpwd">Enter Password</string>
    <string name="login_h1"><u>Forgot Password? Tap Here</u></string>
    <string name="login_h2">Excuse yourself from all the hassle. We recommend you select Google Login to use your Google Account. </string>
    <string name="loginbut">LOGIN</string>
    <string name="signupbut">SIGN UP</string>
    <string name="googsignin">GOOGLE LOGIN</string>
    <string name="signup_main">SIGN UP INFORMATION</string>
    <string name="signem">Enter Email ID</string>
    <string name="signpw">Enter Password</string>
    <string name="signre">Re-Enter Password</string>
    <string name="signmob">Enter mobile number</string>
    <string name="signnm">Your Full Name</string>
    <string name="signcol">Enter College &amp; Year</string>
    <string name="captcha">VERIFY CAPTCHA</string>
    <string name="nav_h1">Not Logged IN</string>
    <string name="nav_h2">Log IN to Play</string>
    <string name="sess_use_h1">Session already in Use</string>
    <string name="sess_use_h2">This account is already logged in somewhere. The information regarding previous log in mentioned below.</string>
    <string name="sess_use_h3">Do you want to log out of all previous sessions and login this one instead?</string>
    <string name="sess_use_b1">Yes</string>
    <string name="sess_use_b2">No</string>
    <string name="mainquiz_h1">In case you are seeing this, the questions have not been loaded due to some reason. Please log out of your account, close &amp; reopen this app and check if this resolves the problem.</string>
    <string name="mainquiz_h2">Enter your answer to this question</string>
    <string name="mainquiz_ed1">Your Answer</string>
    <string name="mainquiz_h3">You must ensure absolutely correct spellings. Please Google them as required.</string>
    <string name="mainquiz_h4">Please wait while resources are loading&#8230;</string>
    <string name="mainquiz_h7">0% Complete</string>
    <string name="mainquiz_h8">You have already answered this questions.\nRe-submit to modify</string>
    <string name="mainquiz_h5">Failed to load the resource. Do you want to</string>
    <string name="mainquiz_h9">CORRECT+: NA</string>
    <string name="mainquiz_h10">WRONG-: NA</string>
    <string name="mainquiz_h6">Retry?</string>
    <string name="mainquiz_b1">Submit</string>
    <string name="mainquiz_b2">Back</string>
    <string name="mainquiz_b3">Forward</string>
    <string name="ftf_h1"><u>Please read Carefully</u></string>
    <string name="ftf_h2">Questions and Answers: Here are some things you must keep in mind before starting the quiz.</string>
    <string name="ftf_h3">\u2022 The marks for correct and wrong answers and shown in the question itself. Pay attention.\n\u2022 Click on \"Matrix\" to view answered &amp; unanswered questions.\n\u2022 In case you are logged out for any reason, don\'t panic- You can login again and start from where you have left.\n\u2022 Quiz master is always right! \n\u2022 The server might stop responding at times and the page might throw an error. You can close and reopen the app to continue.</string>
    <string name="ftf_h4"><u>How should you answer!</u></string>
    <string name="ftf_h5">Here are some examples of acceptable submissions in case the answer is Mahatma Gandhi. (Two worded Answer)\n\u2022 mahatma gandhi: Most acceptable answer.\n\u2022 MAHATMA GANDHI: Acceptable answer.\n\u2022 Mohandas karamchand Gandhi:Not acceptable answer (two worded is mentioned)\n\u2022 MK Gandhi: Not an acceptable answer.</string>
    <string name="ftf_h6"><u>How are the results declared.</u></string>
    <string name="ftf_h7">Results for this contest will be announced soon after the end of the quiz.\n\u2022 In case the participants score equal points, they will be sorted in order of increasing time. That is, the person attaining the point in least time will be ahead in points table.\n\u2022 Correct Answers will be announced after the end of the quiz.\n\u2022 In case you believe that your correct answer has been marked as incorrect, you are free to contact us at support@qfrat.co.in with Subject- "Marking error". We will revert back to you shortly.</string>
    <string name="ftf_h8">I have read all terms and condition and agree to abide by them</string>
    <string name="ftf_b1">START QUIZ</string>
    <string name="qzlist_h1">Select the quiz you wish to play</string>
    <string name="qzlst_h1">QUIZ NAME</string>
    <string name="qzlst_h2">ERR</string>
    <string name="qzlst_h3">Worth Prizes</string>
    <string name="qzlst_h4">Starts:</string>
    <string name="qzlst_h5">N\/A</string>
    <string name="qzlst_h6">Please wait while we fetch the quiz list for you&#8230;</string>
    <string name="qzlst_h7">We are unable to fetch the quiz list. Please check your internet connection &amp; try again.</string>
    <string name="atmpt_h1">Attempting to Log you in using your previous login credentials. Please wait&#8230;</string>
    <string name="qzplay_b1">MATRIX</string>
    <string name="qzplay_b2">GOTO</string>
    <string name="qzplay_h1">\/ NA</string>
    <string name="qzplay_h2">NA:NA</string>
    <string name="qzplay_h3">Enter question number to jump to</string>
    <string name="newsfrag_h1">TOP HEADLINES</string>
    <string name="lvn_h1">Failed to fetch the feed list. Please try again later.</string>
    <string name="newsfrag_h2">NOT LOADED</string>
    <string name="newsfrag_h3">You are seeing this as the components have not been correctly loaded. Please refresh this app.</string>
    <string name="newsfrag_h4">Click here to visit this article\'s news website.</string>
    <string name="newsfrag_h5">AUTHOR NOT AVAILABLE</string>
    <string name="univ_na">NOT AVAILABLE</string>
    <string name="gadd_h1">Additional information Required</string>
    <string name="gadd_h2">Enter Mobile Number</string>
    <string name="gadd_h3">Your College+Branch</string>
    <string name="navl_h1">News &amp; Updates</string>
    <string name="nav1_h2">Play Quiz</string>
    <string name="nav1_h3">Login &amp; SignUp</string>
    <string name="nav1_h4">About</string>
    <string name="respw_h1">Reset Password</string>
    <string name="respw_h2">Enter Email ID</string>
    <string name="signout_h1">You are already signed in, do you want to sign out instead?</string>
    <string name="signout_b1">SIGN OUT</string>
    <string name="abtus_h1">ABOUT</string>
    <string name="abtus_h2">QFrat is the Quizzing fraternity dedicated to community quizzing across all genres.\nStarted in 2010 in KNIT Sultanpur, QFrat is one of the prime quizzing community in the northern Indian region.</string>
    <string name="abtus_h3">This APP is in BETA</string>
    <string name="abtus_h4">You may experience unexpected issues which will be rectified as soon as we find it.</string>
    <string name="abtus_l1">https://qfrat.co.in\nsupport@qfrat.co.in\nDeveloper: kumar.16230@knit.ac.in</string>
    <string name="abtus_v">Version: 1.5.0</string>
    <string name="quizc_h1">QUIZ HAS ENDED</string>
    <string name="quizc_h2">Thank you for your participation. Hope you found this quiz informative, challenging and useful.\nPlease note: The results will be sent to your registered email IDs along with social media. Stay tuned</string>
    <string name="quizc_b1">HOME</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
