<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFF6F3"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:background="#FFF6F3"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quizc_h1"
            android:id="@+id/textview1"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:background="#663399"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/calibri"
            android:text="@string/quizc_h2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview1">

        </TextView>

        <Button
            android:id="@+id/homebut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quizc_b1"
            android:textColor="@android:color/white"
            android:minHeight="0dp"
            android:minWidth="70dp"
            android:padding="10dp"
            android:background="@drawable/buttons"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textview2"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>